Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21610

Different query results from 10.4.11 to 10.4.12

Details

    Description

      After upgrade from 10.4.11 to 10.4.12 the result of a query has changed:
      10.4.11 -> returns 1 record
      10.4.12 -> returns 0 record!

      This is very critical for me as it distorts behavior of entire application.
      I've attached scripts to reproduce behavior.

      Attachments

        1. data_definition.sql
          8 kB
        2. explain.txt
          4 kB
        3. settings.txt
          1 kB

        Activity

          Transition Time In Source Status Execution Times
          Igor Babaev (Inactive) made transition -
          Open In Progress
          11d 14h 42m 1
          Sergei Petrunia made transition -
          In Progress In Review
          3d 1h 15m 1
          Sergei Petrunia made transition -
          In Review Stalled
          11d 3h 8m 1
          Sergei Petrunia made transition -
          Stalled Closed
          15s 1

          People

            psergei Sergei Petrunia
            SuperC SuperC
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.