sql/multi_range_read.h
@@ -364,7 +364,7 @@ class Mrr_ordered_rndpos_reader : public Mrr_reader
 {
 public:
   int init(handler *file, Mrr_index_reader *index_reader, uint mode,
-           Lifo_buffer *buf);
+           Lifo_buffer *buf, Rowid_filter *filter);
   int get_next(range_id_t *range_info);
   int refill_buffer(bool initial);
 private:
@@ -399,6 +399,9 @@ private:
   /* Buffer to store (rowid, range_id) pairs */
   Lifo_buffer *rowid_buffer;
   
+  /* Rowid filter to be checked against (if any) */
+  Rowid_filter *rowid_filter;
+
   int refill_from_index_reader();
 };
 
